2007-04-02  Frank Ch. Eigler  <fche@redhat.com>

	PR 3261.
	* tapsets.cxx (query_module): Reject elfutils module "kernel"
	unless kernel.* probe point used.

2007-04-02  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (query_dwarf_func): Skip non-inlined functions
	for .function().inline case.

2007-03-30  Frank Ch. Eigler  <fche@redhat.com>

	PR 1570
	* NEWS: Document probe handler language change re. inline functions.
	* stapprobes.5.in: Likewise.
	* tapsets.cxx: Many changes to simplify caches and implement new
	handling of inline functions, removed of stubs for future probes.
	* elaborate.cxx (derived_probe printsig_nested): New function.
	* elaborate.h: Declare it.
	* main.cxx (usage): Clarify "-r" meaning.
	(main): Tweak related "-p 4" message.

2007-03-30  David Smith  <dsmith@redhat.com>

	PR 2341
	* translate.cxx (c_unparser::emit_locks): No longer emits a read
	lock for global variables that are only written to in begin/end
	probes.
	(c_unparser::emit_unlocks): Ditto.
	(translate_pass): Runs a varuse_collecting_visitor over probes
	that need global variable locks for use in
	emit_locks()/emit_unlocks().

	* stap.1.in: Corrected probe overload processing text.

2007-03-29  David Smith  <dsmith@redhat.com>

	PR 3545
	* stap.1.in: Documented probe overload processing.

2007-03-29  Frank Ch. Eigler  <fche@redhat.com>

	* tapsets.cxx (dwarf_derived_probe emit_module_init): Correct handling
	of kprobe registration errors in the middle of a sequence.

2007-03-29  David Smith  <dsmith@redhat.com>

	PR 4281
	* main.cxx (main): Validates '-m NAME' option.  Chops off '.ko' if
	present.  Makes sure name isn't empty.  Makes sure name is only
	composed of characters [_a-zA-Z0-9].

2007-03-28  David Smith  <dsmith@redhat.com>

	PR 2341 (partial fix)
	* elaborate.h (struct derived_probe): Added needs_global_locks()
	member function.  Unless overridden, will return true indicating
	that this probe needs locks around global variable references.